hphp/test/slow/class-ptr/get-class-from-type-basic-noexist.php.expectf
Fatal error: when resolving anonymous type structure, class D not found in %s/class-ptr/get-class-from-type-basic-noexist.php on line 5
